@startuml

title __VERERBUNGPRODUKT's Class Diagram__\n

  namespace produkte {
    class produkte.Druker {
    }
  }
  

  namespace produkte {
    class produkte.Main {
    }
  }
  

  namespace produkte {
    class produkte.Monitor {
    }
  }
  

  namespace produkte {
    class produkte.Produkt {
    }
  }
  

  produkte.Druker -up-|> produkte.Produkt
  produkte.Monitor -up-|> produkte.Produkt


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
